--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     var canvas = document.createElement("canvas");
     var ctx = canvas.getContext("2d");
     canvas.width = 400;
-    canvas.height = 490;
+    canvas.height = 500;
     document.body.appendChild(canvas);
 
     var keysDown = {};
+    var aTubes = [];
     var player = new Player();
     var tube = new Tube();
     var timeCheck = 0;
     var jump = false;
     var start= false;
+    var time = 0;
 
 
     addEventListener("keydown", function(e) {
@@ -39,9 +41,9 @@
     var update = function(delta) {
         if (start) {
             player.update(delta);
+            //player.collisionDetection();
             updateTube(delta);
         }
-
     }
 
     var render = function() {
@@ -50,6 +52,11 @@
 
         player.render();
         renderTube();
+        //console.log("Time is: "+time / 1000);
+    }
+
+    function showTime() {
+        time++;
     }
 
     var main = function() {
@@ -64,7 +71,8 @@
 
     reset();
     var then = Date.now();
-    setInterval(main, 1);
+    setInterval(main, 1000 / 30);
+    setInterval(showTime, 1);
 </script>
 </body>
 </html>
