--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Some bird</title>
+    <title>Fappy Bat Underground Cave Edition 3000 by Laker F</title>
 </head>
 <body>
 <script src="Player.js"></script>
 <script src="Tube.js"></script>
+<script src="media.js"></script>
+<canvas id="canvas" width="500" height="500">
+    <p>Fappy Bat Underground Cave Edition 3000 by Laker F</p>
+</canvas>
 <script>
+    /*
     var canvas = document.createElement("canvas");
     var ctx = canvas.getContext("2d");
     canvas.width = 400;
     canvas.height = 500;
     document.body.appendChild(canvas);
+    */
+    var canvas = document.getElementById("canvas");
+    var ctx = canvas.getContext("2d");
+    var backBuffer = document.createElement("canvas");
+    backBuffer.width = canvas.width;
+    backBuffer.height = canvas.height;
+    var backBufferCTX = backBuffer.getContext("2d");
+    document.body.appendChild(backBuffer);
 
     var keysDown = {};
     var aTubes = [];
     var player = new Player();
-    var tube = new Tube();
-    var timeCheck = 0;
     var jump = false;
     var start= false;
-    var time = 0;
-
+    var score = 0;
+    var scoreChecker = false;
+    var gameOver = false;
+    var timeCounter = 0;
+    var animationCrop = 0;
+    var logoDelay = 0;
+    var keyboardSomething = false;
 
     addEventListener("keydown", function(e) {
-        keysDown[e.keyCode] = true;
-        start = true;
+        if (keyboardSomething) {keysDown[e.keyCode] = true;}
+        if (keysDown[32]) {start = true;}
     }, false);
     addEventListener("keyup", function(e) {
         delete keysDown[e.keyCode];
@@ -33,30 +49,55 @@
     }, false);
 
     var reset = function() {
-        start = false;
-        player.reset();
-        spawnTube();
-    }
-
-    var update = function(delta) {
-        if (start) {
-            player.update(delta);
-            //player.collisionDetection();
-            updateTube(delta);
+        if (!gameOver) {
+            score = 0;
+            start = false;
+            player.reset();
+            spawnTube();
         }
     }
 
-    var render = function() {
-        ctx.fillStyle = "rgb(113, 197, 207)";
-        ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-        player.render();
-        renderTube();
-        //console.log("Time is: "+time / 1000);
+    var update = function(delta) {
+        if (!gameOver) {
+            if (start) {
+                player.update(delta);
+                player.collisionDetection();
+                updateTube(delta);
+                player.scoreKeeper();
+            }
+        }
     }
 
-    function showTime() {
-        time++;
+    var render = function(delta) {
+        if (!gameOver) {
+            ctx.drawImage(bg, 0, 0);
+
+            if (start) {
+                player.render(delta);
+            }
+
+            renderTube();
+            ctx.fillStyle = "rgb(250, 250, 250)";
+            ctx.font = "30px Helvetica";
+            ctx.textAlign = "left";
+            ctx.textBaseline = "top";
+            ctx.fillText(score, 20, 20);
+        } else {
+            ctx.fillStyle = "rgb(250, 250, 250)";
+            ctx.font = "50px Helvetica";
+            ctx.textAlign = "center";
+            ctx.textBaseline = "middle";
+            ctx.fillText("Your score is " +score, canvas.width / 2, canvas.height / 2);
+            ctx.font = "30px Helvetica";
+            ctx.fillText("Press ENTER to continue", canvas.width / 2, canvas.height / 2 + 100);
+        }
+        if (!start) {
+            ctx.fillStyle = "rgb(250, 250, 250)";
+            ctx.font = "50px Helvetica";
+            ctx.textAlign = "center";
+            ctx.textBaseline = "middle";
+            ctx.fillText("Press SPACEBAR", canvas.width / 2, canvas.height / 2);
+        }
     }
 
     var main = function() {
@@ -67,12 +108,26 @@
         render(delta);
 
         then = now;
+
+        logoDelay += delta;
+        if (logoDelay < 2000) {
+            ctx.drawImage(goldenGod, 0, 0);
+        } else if (logoDelay >= 2000 && logoDelay < 4000) {
+            ctx.drawImage(batL, 0, 0);
+
+        } else {
+            keyboardSomething = true;
+            if (keysDown[13] && gameOver) {
+                gameOver = false;
+                reset();
+            }
+        }
     }
 
     reset();
     var then = Date.now();
     setInterval(main, 1000 / 30);
-    setInterval(showTime, 1);
 </script>
+
 </body>
 </html>
