--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
     var timeCounter = 0;
     var animationCrop = 0;
     var logoDelay = 0;
-    var keyboardSomething = false;
+    var takesInput = false;
+    var firstDraw = false;
 
     addEventListener("keydown", function(e) {
-        if (keyboardSomething) {keysDown[e.keyCode] = true;}
+        if (takesInput) {keysDown[e.keyCode] = true;}
         if (keysDown[32]) {start = true;}
     }, false);
     addEventListener("keyup", function(e) {
@@ -50,6 +51,7 @@
 
     var reset = function() {
         if (!gameOver) {
+            firstDraw = false;
             score = 0;
             start = false;
             player.reset();
@@ -70,19 +72,23 @@
 
     var render = function(delta) {
         if (!gameOver) {
-            ctx.drawImage(bg, 0, 0);
-
+            if (!firstDraw  && start) {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+                ctx.drawImage(bg, 0, 0);
+                firstDraw = true;
+            }
             if (start) {
                 player.render(delta);
+                renderTube();
+                ctx.fillStyle = "rgb(250, 250, 250)";
+                ctx.font = "30px Helvetica";
+                ctx.textAlign = "left";
+                ctx.textBaseline = "top";
+                ctx.fillText(score, 20, 20);
             }
-
-            renderTube();
-            ctx.fillStyle = "rgb(250, 250, 250)";
-            ctx.font = "30px Helvetica";
-            ctx.textAlign = "left";
-            ctx.textBaseline = "top";
-            ctx.fillText(score, 20, 20);
         } else {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.drawImage(bg, 0, 0);
             ctx.fillStyle = "rgb(250, 250, 250)";
             ctx.font = "50px Helvetica";
             ctx.textAlign = "center";
@@ -92,12 +98,15 @@
             ctx.fillText("Press ENTER to continue", canvas.width / 2, canvas.height / 2 + 100);
         }
         if (!start) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.drawImage(bg, 0, 0);
             ctx.fillStyle = "rgb(250, 250, 250)";
             ctx.font = "50px Helvetica";
             ctx.textAlign = "center";
             ctx.textBaseline = "middle";
             ctx.fillText("Press SPACEBAR", canvas.width / 2, canvas.height / 2);
         }
+
     }
 
     var main = function() {
@@ -110,13 +119,12 @@
         then = now;
 
         logoDelay += delta;
-        if (logoDelay < 2000) {
+        if (logoDelay < 500) {
             ctx.drawImage(goldenGod, 0, 0);
-        } else if (logoDelay >= 2000 && logoDelay < 4000) {
+        } else if (logoDelay >= 500 && logoDelay < 1250) {
             ctx.drawImage(batL, 0, 0);
-
         } else {
-            keyboardSomething = true;
+            takesInput = true;
             if (keysDown[13] && gameOver) {
                 gameOver = false;
                 reset();
@@ -126,7 +134,7 @@
 
     reset();
     var then = Date.now();
-    setInterval(main, 1000 / 30);
+    setInterval(main, 1000 / 60);
 </script>
 
 </body>
